objects/CleanQuote__c.object
<CustomObject>
    <description>Object for CleanQuote to write to, that then can write to Lead Objects</description>
    <fields>
        <fullName>AccountTypeNew__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalAccType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_production_degradation__c</fullName>
        <defaultValue>-0.5</defaultValue>
        <label>Annual production degradation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Application_Submission_Date__c</fullName>
        <label>Application Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Completed_in_Last_5_Years__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appraisal Completed in Last 5 Years?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appraisal_Date__c</fullName>
        <label>Appraisal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraised_Value__c</fullName>
        <label>Appraised Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Are_all_Mortgages_s_current__c</fullName>
        <label>Are all Mortgages(s) current?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Useful_Life__c</fullName>
        <inlineHelpText>The average useful life of the non-solar improvements.</inlineHelpText>
        <label>Average Useful Life</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bankruptcies__c</fullName>
        <label>Bankruptcies?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bankruptcy_Comment__c</fullName>
        <label>Bankruptcy Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benchmark_Date_at_Indicative_Quote__c</fullName>
        <label>Benchmark Date at Indicative Quote</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benchmark_Type__c</fullName>
        <label>Benchmark Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interest Rate Swap Yield</fullName>
                </value>
                <value>
                    <fullName>U.S. Treasury constant maturity yield</fullName>
                </value>
                <value>
                    <fullName>Fixed Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benchmark_at_Indicative_Quote__c</fullName>
        <label>Benchmark at Indicative Quote</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Building_Size_sq_ft__c</fullName>
        <label>Building Size (sq ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Lead_Source__c</fullName>
        <label>CF Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CF_Lead_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Sub_Lead_Source__c</fullName>
        <label>CF Sub-Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQ_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Lead that is Associated with CQ</inlineHelpText>
        <label>CQ Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>CleanQuotes</relationshipLabel>
        <relationshipName>CleanQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQ_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CQ Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CleanQuotes</relationshipLabel>
        <relationshipName>CleanQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CleanQuote_Sourced_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CleanQuote Sourced Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CleanQuote_URL__c</fullName>
        <label>CleanQuote URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contamination_Comment__c</fullName>
        <label>Contamination Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contamination__c</fullName>
        <label>Contamination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractor_City__c</fullName>
        <label>Contractor City</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contractor_Company_Name__c</fullName>
        <label>Contractor Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Email__c</fullName>
        <label>Contractor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contractor_First__c</fullName>
        <label>Contractor First</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Geolocation__c</fullName>
        <label>Contractor Geolocation</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Contractor_Last__c</fullName>
        <label>Contractor Last</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Phone__c</fullName>
        <label>Contractor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contractor_State__c</fullName>
        <label>Contractor State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractor_Street__c</fullName>
        <label>Contractor Street</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contractor_Zip__c</fullName>
        <label>Contractor Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Balance_1st__c</fullName>
        <label>Current Balance (1st)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Balance_2nd__c</fullName>
        <label>Current Balance (2nd)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Occupancy__c</fullName>
        <label>Current Occupancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Desired_Project_Finish_Date__c</fullName>
        <label>Desired Project Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environmental_Issues__c</fullName>
        <label>Environmental Issues?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environmental_Site_Assessment_Completed__c</fullName>
        <label>Environmental Site Assessment Completed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environmental_Studies_Performed__c</fullName>
        <label>Environmental Studies Performed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TSA</fullName>
                </value>
                <value>
                    <fullName>Phase I</fullName>
                </value>
                <value>
                    <fullName>Phase II</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Utility_Rate_Escalation__c</fullName>
        <label>Estimated Utility Rate Escalation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Crime_Comments__c</fullName>
        <label>Financial Crime Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Crime__c</fullName>
        <label>Financial Crime</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financing_Term__c</fullName>
        <label>Financing Term</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreclosure_Short_Sale_Comment__c</fullName>
        <label>Foreclosure, Short Sale Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Foreclosure_Short_Sale_or_Deed_in_Lieu__c</fullName>
        <label>Foreclosure, Short Sale, or Deed in Lieu</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Government_Regulations_Comment__c</fullName>
        <label>Government Regulations Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ground_Lease_Expiration_Date__c</fullName>
        <label>Ground Lease Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ground_Lease__c</fullName>
        <label>Ground Lease</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hazardous_Substances_Comment__c</fullName>
        <label>Hazardous Substances Comment</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hazardous_Substances__c</fullName>
        <label>Hazardous Substances</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_did_I_find_CleanQuote__c</fullName>
        <label>How did I find CleanQuote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CleanFund Team Member</fullName>
                </value>
                <value>
                    <fullName>News Article</fullName>
                </value>
                <value>
                    <fullName>Internet Search</fullName>
                </value>
                <value>
                    <fullName>CleanFund Email Marketing</fullName>
                </value>
                <value>
                    <fullName>PACE Nation</fullName>
                </value>
                <value>
                    <fullName>Colleague or Industry Professional</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner Network Team Member</fullName>
                </value>
                <value>
                    <fullName>Partner Network Email Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Improvement_Cost_Est__c</fullName>
        <label>Improvement Cost (Est)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Indicative_Interest_Rate__c</fullName>
        <label>Indicative Interest Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Indicative_Quote_Sent_Date__c</fullName>
        <label>Indicative Quote Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Involuntary_Lien_Comment__c</fullName>
        <label>Involuntary Lien Comment</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Involuntary_Liens__c</fullName>
        <label>Involuntary Liens</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_StandAlone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is StandAlone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Notes__c</fullName>
        <label>Lead Owner Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Stage__c</fullName>
        <label>Lead Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Identified</fullName>
                </value>
                <value>
                    <fullName>Pre-Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Quoted</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Dead/Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Name_of_Property_Owner__c</fullName>
        <label>Legal Name of Property Owner</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lender_Type_1st__c</fullName>
        <label>Lender Type 1st</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lender_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lender_Type_2nd__c</fullName>
        <label>Lender Type 2nd</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lender_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Value__c</fullName>
        <label>Market Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>More_than_2_Lenders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>More than 2 Lenders?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mortgage_Lender_1st__c</fullName>
        <label>Mortgage Lender (1st)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgage_Lender_2nd__c</fullName>
        <label>Mortgage Lender (2nd)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgages_Current_Comment__c</fullName>
        <label>Mortgages Current Comment</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Multiple_Owner_Entities__c</fullName>
        <label>Multiple Owner Entities?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Step_Tickler__c</fullName>
        <label>Next Step Tickler</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Solar_Savings__c</fullName>
        <inlineHelpText>The amount of savings the non-solar specific cost of the project will produce annually. For instance LED lighting will have savings.</inlineHelpText>
        <label>Non Solar Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Parcels__c</fullName>
        <label>Number of Parcels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Project_Scope__c</fullName>
        <label>Opp Project Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Construction</fullName>
                </value>
                <value>
                    <fullName>Upgrade/Retrofit</fullName>
                </value>
                <value>
                    <fullName>Gut Rehab</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Property_Description__c</fullName>
        <label>Other Property Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Bankruptcy_Comment__c</fullName>
        <label>Owner Bankruptcy Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Bankruptcy__c</fullName>
        <label>Owner Bankruptcy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Occupied__c</fullName>
        <label>Owner Occupied</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_as_Defendant_Comments__c</fullName>
        <label>Owner as Defendant Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_as_Defendant__c</fullName>
        <label>Owner as Defendant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPA__c</fullName>
        <label>PPA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Company__c</fullName>
        <label>Partner Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Email__c</fullName>
        <label>Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_First_Name__c</fullName>
        <label>Partner First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Last_Name__c</fullName>
        <label>Partner Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Phone__c</fullName>
        <label>Partner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pending_Proceedings_or_Lawsuits_Comments__c</fullName>
        <label>Pending Proceedings or Lawsuits Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pending_Proceedings_or_Lawsuits__c</fullName>
        <label>Pending Proceedings or Lawsuits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prepayment__c</fullName>
        <label>Prepayment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5% (10), 4% (11), 3% (12), 2% (13), 1% (14)</fullName>
                </value>
                <value>
                    <fullName>5% (7), 4% (8), 3% (9), 2% (10), 1% (11)</fullName>
                </value>
                <value>
                    <fullName>4% (7), 3% (8), 2% (9), 1% (10)</fullName>
                </value>
                <value>
                    <fullName>5% (5), 4% (6), 3% (7), 2% (8), 1% (9)</fullName>
                </value>
                <value>
                    <fullName>4% (5), 3% (6), 2% (7), 1% (8)</fullName>
                </value>
                <value>
                    <fullName>3% (8), 2% (9), 1% (10)</fullName>
                </value>
                <value>
                    <fullName>5% (2) 3% (5) 2% (6)</fullName>
                </value>
                <value>
                    <fullName>Yield Maintenance (special)</fullName>
                </value>
                <value>
                    <fullName>Other (Please Specify in Project Notes)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Type__c</fullName>
        <label>Primary Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alternative</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Mixed Use</fullName>
                </value>
                <value>
                    <fullName>Multifamily</fullName>
                </value>
                <value>
                    <fullName>Nonprofit</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Notes__c</fullName>
        <label>Project Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Scope_Description__c</fullName>
        <label>Project Scope Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Scope__c</fullName>
        <label>Project Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Construction</fullName>
                </value>
                <value>
                    <fullName>Upgrade/Retrofit</fullName>
                </value>
                <value>
                    <fullName>Gut Rehab</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Size_In_Dollars__c</fullName>
        <label>Project Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Permitting</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Completed - Looking for PACE reimbursement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>Property City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <label>Property County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Geolocation__c</fullName>
        <label>Property Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Property_Owner_City__c</fullName>
        <label>Property Owner City</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Owner_Email__c</fullName>
        <label>Property Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Property_Owner_First__c</fullName>
        <label>Property Owner First</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Owner_Geolocation__c</fullName>
        <label>Property Owner Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Property_Owner_Last__c</fullName>
        <label>Property Owner Last</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Owner_Phone__c</fullName>
        <label>Property Owner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Property_Owner_State__c</fullName>
        <label>Property Owner State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Owner_Street__c</fullName>
        <label>Property Owner Street</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Owner_Zip__c</fullName>
        <label>Property Owner Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Purchase_Price__c</fullName>
        <label>Property Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Scope_Text__c</fullName>
        <label>Property Scope Text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <label>Property State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Street_Address__c</fullName>
        <label>Property Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Tax_Comment__c</fullName>
        <label>Property Tax Comment</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Taxes_Current__c</fullName>
        <label>Property Taxes Current?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Zip__c</fullName>
        <label>Property Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regulatory_Government_Actions__c</fullName>
        <label>Regulatory Government Actions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renovation_Date__c</fullName>
        <label>Renovation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Studies_or_Assessments_Comments__c</fullName>
        <label>Risk Studies or Assessments Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Studies_or_Assessments__c</fullName>
        <label>Risk Studies or Assessments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Run_Duplicate_Rules__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Run Duplicate Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sensitive_Industries_Comment__c</fullName>
        <label>Sensitive Industries Comment</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sensitive_Industries__c</fullName>
        <label>Sensitive Industries</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_Specific_Cost__c</fullName>
        <label>Solar Specific Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spread_at_Quote_bps__c</fullName>
        <label>Spread at Quote (bps)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_to_convert_Opp_To__c</fullName>
        <label>Stage to convert Opp To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>